# layout-parser

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  demo.py  dev-requirements.txt  installation.md  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api_doc/: elements.rst  io.rst  models.rst  ocr.rst  visualization.rst
docs/example/deep_layout_parsing/: index.rst
docs/example/load_coco/: index.rst
docs/example/parse_ocr/: index.rst
docs/notes/: Train_PaddleDetection_model.md  installation.md  modelzoo.md  quickstart.rst  shape_operations.md
examples/: Load and visualize layout annotations in the COCO format.ipynb  OCR Tables and Parse the Output.ipynb  OCR_tesserocr_example.ipynb
examples/Customizing Layout Models with Label Studio Annotation/: README.md  download_annotation.py
src/effocr-layout/: file_utils.py
src/effocr-layout/elements/: __init__.py  base.py  errors.py
src/effocr-layout/io/: __init__.py  basic.py  pdf.py
src/layoutparser/: __init__.py  elements.py  file_utils.py  io.py  models.py  ocr.py  visualization.py
tests/: test_elements.py  test_io.py  test_model.py  test_ocr.py  test_tools.py  test_visualization.py
tests/source/: test_gcv_credential.json  test_tesseract_response.pickle
tests_deps/: test_file_utils.py  test_only_detectron2.py  test_only_effdet.py  test_only_paddledetection.py
(+70 files in other folders)
