[metadata]
name = layoutparser
description = Layout Parser is a deep learning assisted tool for Document Image Layout Analysis.
keywords = layout analysis, deep learning
license = Apache-2.0
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
package_dir=
    =src
packages=find:

[options.packages.find]
where=src